# project

./: CLI.cpp  CMakeLists.txt  Iris.cpp  Iris.h  README.md  Upload.cpp  output.csv  soccerOutput.csv
Client/: CLI.cpp  CLI.h  Classify.cpp  Classify.h  Command.cpp  Command.h  Matrix.cpp  Settings.cpp  Settings.h  TCPClient.cpp  TCPClient.h  Upload.cpp  main.cpp
Server/: CLI.cpp  CLI.h  Classify.cpp  Classify.h  Command.cpp  Command.h  Display.cpp  Display.h  Download.cpp  Download.h  Knn.cpp  Knn.h  Matrix.cpp  Matrix.h  Settings.cpp  Settings.h  TCPServer.cpp  TCPServer.h  Upload.cpp  Upload.h  main.cpp
